<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/add_photo_card_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@null"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_card"
        app:layout_constraintEnd_toEndOf="@+id/avatar_card"
        tools:ignore="SpeakableTextPresentCheck">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            app:srcCompat="@drawable/addaphoto" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/avatar_card"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="80dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logovet" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_card">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_pet_kind"
            style="@style/EditTextMain"
            android:hint="@string/kind" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_pet_name"
            style="@style/EditTextMain"
            android:hint="@string/name_pet" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_pet_breed"
            style="@style/EditTextMain"
            android:hint="@string/breed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_pet_gender"
                style="@style/EditTextMain"
                android:layout_weight="1"
                android:hint="@string/gender" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_pet_color"
                style="@style/EditTextMain"
                android:layout_weight="1"
                android:hint="@string/color_pet" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_pet_ownerphone"
            style="@style/EditTextMain"
            android:hint="@string/phone_owner" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_pet_comment"
            style="@style/EditTextMain"
            android:hint="@string/note" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


